@@ -128,9 +128,10 @@ pop3_session_t *pop3_session_new(int pipelining,
     session->server_hostname = NULL;
     session->server_canonical_name = NULL;
     session->server_address = NULL;
-    net_readbuf_init(&(session->readbuf));
+    net_readbuf_init(&(session->net_readbuf));
 #ifdef HAVE_TLS
     tls_clear(&session->tls);
+    tls_readbuf_init(&(session->tls_readbuf));
 #endif /* HAVE_TLS */
     session->cap.flags = 0;
     session->pipelining = pipelining;
@@ -235,13 +236,13 @@ int pop3_gets(pop3_session_t *session, size_t *len, char **errstr)
 #ifdef HAVE_TLS
     if (tls_is_active(&session->tls))
     {
-	e = (tls_gets(&session->tls, session->buffer, POP3_BUFSIZE, len, errstr)
-		!= TLS_EOK);
+	e = (tls_gets(&session->tls, &(session->tls_readbuf),
+		    session->buffer, POP3_BUFSIZE, len, errstr) != TLS_EOK);
     }
     else
     {
 #endif /* HAVE_TLS */
-	e = (net_gets(session->fd, &(session->readbuf), 
+	e = (net_gets(session->fd, &(session->net_readbuf), 
 		    session->buffer, POP3_BUFSIZE, len, errstr) != NET_EOK);
 #ifdef HAVE_TLS
     }
