@@ -1,4 +1,6 @@
 Version 1.0.13:
+- Buffer read operations also when TLS/SSL is active. Fixes performance problems
+  with GnuTLS, reported by Dimitrios Apostolou.
 - Fixed a potential problem with VPATH builds.
 - Small optimization in insert_sorted() in pop3.c, by Dimitrios Apostolou.
 - Updated gnulib to 2008-02-26. Imported havelib module.
